# Heat

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  bcs.html  genindex.html  heat.html  index.html  installation.html  modules.html  objects.inv  params.json  publish-key.enc  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  setup.py  theory.html  tox.ini  usage.html
.doctrees/: bcs.doctree  environment.pickle  heat.doctree  index.doctree  installation.doctree  modules.doctree  readme.doctree  theory.doctree  usage.doctree
_modules/: index.html
_modules/heat/: boundary.html  command_line.html  domain.html  geometry.html  gui.html  init.html  initial.html  material.html  mesh.html  model.html  solution.html  source.html  vtktools.html
_modules/unipath/: path.html
_sources/: heat.rst.txt  heat.txt  index.rst.txt  installation.rst.txt  theory.rst.txt  usage.rst.txt
cmake/: ReplicatePythonSourceTree.cmake
doc/: CMakeLists.txt  bcs.rst  conf.py  index.rst  modules.rst  theory.rst
heat/: CMakeLists.txt  __init__.py  boundary.py  command_line.py  domain.py  geometry.py  gui.py  init.py  initial.py  material.py  mesh.py  model.py  solution.py  source.py  utils.py  vtktools.py  w.pxd  wrapper.pyx
include/: ComputeSeries.h  Exceptions.h  Misc.h  Uniform.h  Utils.h
requirements/: base.txt  development.txt
src/: ComputeSeries.cxx  Exceptions.cxx  Misc.cxx  Uniform.cxx
tests/: CMakeLists.txt  test_ComputeSeries.cxx  test_ComputeSeries.py  test_Misc.cxx  test_Uniform.cxx  test_Uniform.py  test_boundary.py  test_geometry.py  test_gui.py  test_initial.py  test_main.cxx  test_material.py  test_mesh.py  test_solution.py  test_source.py
